[NANOHUB][#275400][COM_SUPPORT] Make sure query title doesn't overlap badge

--- a/administrator/components/com_support/assets/css/support.css
+++ b/administrator/components/com_support/assets/css/support.css
@@ -1050,7 +1050,7 @@
 	.pane-queries li a.query {
 		display: block;
 		margin: 0;
-		padding: 0.2em 0 0.2em 0.2em;
+		padding: 0.2em 2em 0.2em 0.2em;
 		border: none;
 	}
 	.pane-queries li a.copy,
